--- a/NCRFpp/demo.decode.config
+++ b/NCRFpp/demo.decode.config
@@ -1,7 +1,7 @@
 ### Decode ###
 status=decode
-raw_dir=sample_data/raw.bmes
+raw_dir=data/norm/raw.bmes
 nbest=10
-decode_dir=sample_data/raw.out
-dset_dir=sample_data/lstmcrf.dset
-load_model_dir=sample_data/lstmcrf.0.model
+decode_dir=data/norm/raw.out
+dset_dir=data/norm/lstmcrf.dset
+load_model_dir=data/norm/lstmcrf.0.model
